[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,10 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! I am your webapp.
+            Hi! This is First Web Application.
+            <br>
+            <br>
+            <p1>My Name is Pranav Soneji and I am Learning to build Web Application</p1>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
