[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,13 @@
 <html>
+    <head>
+        <title>Article One | Page One</title>
+    </head>
+    <body>
+        <h1 align="center">This is Article One</h1>
+        <p>This is First Page named as Article One.I am learning Introduction to Modern Application Development.</p>
+        <br>
+        <hr>
+        <br>
+        <p>I am Currently Pursuing Bachelors of Science in Information Technology Degree studying on First Year</p>
+    </body>
 </html>
