[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -8,6 +8,6 @@
         <br>
         <hr>
         <br>
-        <p>I am Currently Pursuing Bachelors of Science in Information Technology Degree studying on First Year</p>
+        <p>I am Currently Pursuing Bachelors of Science in Information Technology Degree studying in First Year</p>
     </body>
 </html>
