[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,12 @@
         <title>Article One | Page One</title>
     </head>
     <body>
+        <div>
+            <a href="/">Home</a>
+            <a href="/page1">Page 1</a>
+            <a href="/ui/article-one">Article One</a>
+            <a href="/ui/article-two">Article Two</a>
+        </div>
         <h1 align="center">This is Article One</h1>
         <p>This is First Page named as Article One.I am learning Introduction to Modern Application Development.</p>
         <br>
