--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,10 +4,12 @@
     </head>
     <body>
         <div>
-            <a href="/">Home</a>
-            <a href="/page1">Page 1</a>
-            <a href="/ui/article-one">Article One</a>
-            <a href="/ui/article-two">Article Two</a>
+            <td border=2" align="center">
+            <tr><a href="/">Home</a>
+            <tr>a href="/page1">Page 1</a>
+            <tr><a href="/ui/article-one">Article One</a>
+            <tr><a href="/ui/article-two">Article Two</a>
+            </td>
         </div>
         <h1 align="center">This is Article One</h1>
         <p>This is First Page named as Article One.I am learning Introduction to Modern Application Development.</p>
