[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,12 +4,14 @@
     </head>
     <body>
         <div>
-            <td border=2" align="center">
-            <tr><a href="/">Home</a>
-            <tr>a href="/page1">Page 1</a>
-            <tr><a href="/ui/article-one">Article One</a>
-            <tr><a href="/ui/article-two">Article Two</a>
-            </td>
+            <table>
+            <tr border="2" align="center">
+            <td><a href="/">Home</a>
+            <td><a href="/page1">Page 1</a>
+            <td><a href="/ui/article-one">Article One</a>
+            <td><a href="/ui/article-two">Article Two</a>
+            </tr>
+            </table>
         </div>
         <h1 align="center">This is Article One</h1>
         <p>This is First Page named as Article One.I am learning Introduction to Modern Application Development.</p>
