[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,12 +4,12 @@
     </head>
     <body>
         <div>
-            <table>
-            <tr border="2" align="center">
-            <td><a href="/">Home</a>
-            <td><a href="/page1">Page 1</a>
-            <td><a href="/ui/article-one">Article One</a>
-            <td><a href="/ui/article-two">Article Two</a>
+            <table border="2" align="center">
+            <tr>
+            <td><a href="/">Home</a></td>
+            <td><a href="/page1">Page 1</a></td>
+            <td><a href="/ui/article-one">Article One</a></td>
+            <td><a href="/ui/article-two">Article Two</a></td>
             </tr>
             </table>
         </div>
