--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div>
-            <table border="2" align="center">
+            <table border="2" align="center" width="100%">
             <tr>
             <td><a href="/">Home</a></td>
             <td><a href="/page1">Page 1</a></td>
