[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,10 @@
         <div>
             <table border="2" align="center" width="100%">
             <tr>
-            <td><a href="/">Home</a></td>
-            <td><a href="/page1">Page 1</a></td>
-            <td><a href="/ui/article-one">Article One</a></td>
-            <td><a href="/ui/article-two">Article Two</a></td>
+            <td align="center"><a href="/">Home</a></td>
+            <td align="center"><a href="/page1">Page 1</a></td>
+            <td align="center"><a href="/ui/article-one">Article One</a></td>
+            <td align="center"><a href="/ui/article-two">Article Two</a></td>
             </tr>
             </table>
         </div>
