[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,7 +2,7 @@
     <head>
         <title>Article One | Page One</title>
     </head>
-    <body>
+    <body bgcolor="wheat">
         <div>
             <table border="2" align="center" width="100%">
             <tr>
