--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,9 @@
             <br>
             <p1>My Name is Pranav Soneji and I am Learning to build Web Application</p1>
         </div>
+        <div class="center">
+        	<p> Made some changes </p>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
